--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.1.12"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ABHILASHTIWARI861/Employee-main.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ABHILASHTIWARI861/Employee-main/issues"
+  },
+  "homepage": "https://github.com/ABHILASHTIWARI861/Employee-main#readme"
 }
